fix swagger to include newly added types
